youfull/objects/Business_Plan_Actual_SPPY__c.object
<CustomObject>
    <fields>
        <fullName>NEXT1_SPPY_TOTAL_ERNGS__c</fullName>
        <label>Total Earnings  (PY)-Current campaign +1</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT2_SPPY_TOTAL_ERNGS__c</fullName>
        <label>Total Earnings  (PY)-Current campaign +2</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT3_SPPY_TOTAL_ERNGS__c</fullName>
        <label>Total Earnings  (PY)-Current campaign +3</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRIOR1_SPPY_TOTAL_ERNGS__c</fullName>
        <label>Total Earnings  (PY)-Current campaign -1</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRIOR2_SPPY_TOTAL_ERNGS__c</fullName>
        <label>Total Earnings  (PY)-Current campaign -2</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRIOR3_SPPY_TOTAL_ERNGS__c</fullName>
        <label>Total Earnings  (PY)-Current campaign -3</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_TOTAL_ESTMTD_ERNGS__c</fullName>
        <label>Total Earnings  (PY)-Current campaign</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Business Plan Actual SPPY_DELETE</label>
    <nameField>
        <label>Business Plan Actual SPPY Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Plan Actual SPPY</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>